--- a/frontend/android/app/src/main/res/layout/tinder_card_applicant.xml
+++ b/frontend/android/app/src/main/res/layout/tinder_card_applicant.xml
@@ -17,6 +17,7 @@
         app:cardElevation="4dp">
 
         <RelativeLayout
+            android:background="@color/colorCardBackgrounds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -24,6 +25,8 @@
                 android:id="@+id/profileImageView"
                 android:layout_above="@id/LLData"
                 android:scaleType="centerCrop"
+                android:layout_marginLeft="70dp"
+                android:layout_marginRight="70dp"
                 android:background="@color/colorAccent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -41,24 +44,21 @@
                     android:id="@+id/TVName"
                     android:layout_width="wrap_content"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
+                    android:textSize="19sp"
                     android:text="Name"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/TVJobTitle"
                     android:layout_width="wrap_content"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
+                    android:textSize="19sp"
                     android:text="JobTitle"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/TVCity"
                     android:layout_width="wrap_content"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
+                    android:textSize="19sp"
                     android:text="City"
                     android:layout_height="wrap_content"/>
 
@@ -85,6 +85,22 @@
                     android:textSize="18dp"
                     android:textStyle="normal"
                     android:text="Work Ex"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@android:color/black"/>
+
+                <TextView
+                    android:textColor="@android:color/black"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    android:text="Skills:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
                 <TextView
                     android:textColor="@android:color/black"
                     android:textSize="18dp"
@@ -104,6 +120,36 @@
                     android:textSize="18dp"
                     android:id="@+id/TVSkill3"
                     android:text="Skill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@android:color/black"/>
+
+
+                <TextView
+                    android:textColor="@android:color/black"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    android:text="Languages:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="@android:color/black"
+                    android:textSize="18dp"
+                    android:id="@+id/TVLang1"
+                    android:text="Language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="@android:color/black"
+                    android:textSize="18dp"
+                    android:id="@+id/TVLang2"
+                    android:text="Language"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
