--- a/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
+++ b/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
@@ -9,7 +9,6 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-
     <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,20 +16,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/AppBarLayout"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                    android:background="?attr/colorPrimary" />
+
+            </android.support.design.widget.AppBarLayout>
+
+            <include
+                android:layout_below="@+id/AppBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                android:background="?attr/colorPrimary" />
+                android:layout_height="match_parent"
+                layout="@layout/include_activity_job_openings_list"/>
 
-            <include layout="@layout/include_activity_job_openings_list"/>
-
-        </android.support.design.widget.AppBarLayout>
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
