--- a/frontend/android/app/src/main/res/layout/include_activity_job_openings_list.xml
+++ b/frontend/android/app/src/main/res/layout/include_activity_job_openings_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/CL"
     android:background="@color/colorAppBackground"
     tools:context=".activities.JobOpeningsListActivity">
 
@@ -21,8 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
@@ -35,7 +35,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVJobOpenings" />
+        app:layout_constraintTop_toBottomOf="@+id/TVJobOpenings" >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAppBackground"
+            android:foregroundGravity="center_horizontal" />
+
+    </ScrollView>
 
     <TextView
         android:id="@+id/TVNoItems"
