--- a/frontend/android/app/src/main/res/layout/activity_login.xml
+++ b/frontend/android/app/src/main/res/layout/activity_login.xml
@@ -42,37 +42,74 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:drawableLeft="@drawable/baseline_person_black_24"
-            android:id="@+id/ETUsername"
-            android:drawablePadding="10dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:background="@drawable/et_login"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TILEmail"
             android:layout_width="match_parent"
-            android:paddingLeft="15dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:layout_height="50dp" />
+            android:layout_height="70dp">
 
-        <EditText
-            android:id="@+id/ETPass"
-            android:drawableLeft="@drawable/baseline_lock_open_black_24"
-            android:drawablePadding="10dp"
-            android:layout_below="@+id/ETUsername"
-            android:paddingLeft="15dp"
-            android:inputType="textPassword"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:hint="Password"
-            android:background="@drawable/et_login"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/ETUsername"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="15dp"
+                android:paddingBottom="15dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:hint="Email"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <!--<EditText-->
+            <!--android:drawableLeft="@drawable/baseline_person_black_24"-->
+            <!--android:id="@+id/ETUsername"-->
+            <!--android:drawablePadding="10dp"-->
+            <!--android:layout_marginLeft="25dp"-->
+            <!--android:layout_marginRight="25dp"-->
+            <!--android:background="@drawable/et_login"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:paddingLeft="15dp"-->
+            <!--android:hint="Email"-->
+            <!--android:inputType="textEmailAddress"-->
+            <!--android:layout_height="50dp" />-->
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TILPass"
+            android:layout_below="@+id/TILEmail"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="70dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/ETPass"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:paddingLeft="15dp"
+                android:paddingBottom="15dp"
+                android:hint="Password"
+                android:inputType="textPassword" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <!--<EditText-->
+            <!--android:id="@+id/ETPass"-->
+            <!--android:drawableLeft="@drawable/baseline_lock_open_black_24"-->
+            <!--android:drawablePadding="10dp"-->
+            <!--android:layout_below="@+id/TILEmail"-->
+            <!--android:paddingLeft="15dp"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_marginLeft="25dp"-->
+            <!--android:layout_marginRight="25dp"-->
+            <!--android:hint="Password"-->
+            <!--android:background="@drawable/et_login"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp" />-->
 
         <Button
             android:id="@+id/btnHit"
-            android:layout_below="@+id/ETPass"
+            android:layout_below="@+id/TILPass"
             android:text="Login"
             android:textColor="#ffffff"
             android:background="@drawable/login_btn"
