--- a/frontend/android/app/src/main/res/layout/activity_company_matchviewer.xml
+++ b/frontend/android/app/src/main/res/layout/activity_company_matchviewer.xml
@@ -17,20 +17,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/AppBarLayout"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                    android:background="?attr/colorPrimary" />
+
+            </android.support.design.widget.AppBarLayout>
+
+            <include
+                android:layout_below="@+id/AppBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                android:background="?attr/colorPrimary" />
+                android:layout_height="match_parent"
+                layout="@layout/include_activity_company_matchviewer"/>
 
-            <include layout="@layout/include_activity_company_matchviewer"/>
-
-        </android.support.design.widget.AppBarLayout>
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
