--- a/frontend/android/app/src/main/res/layout/include_activity_company_matchviewer.xml
+++ b/frontend/android/app/src/main/res/layout/include_activity_company_matchviewer.xml
@@ -19,20 +19,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="40dp"
         android:background="@color/colorAppBackground"
         android:foregroundGravity="center_horizontal"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerJob" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerJob" >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAppBackground"
+            android:foregroundGravity="center_horizontal" />
+
+    </ScrollView>
 
     <TextView
         android:id="@+id/TVNoItems"
