Onboarding Screen Added
Onboarding screen WIP.

--- a/frontend/android/app/src/main/res/layout/include_activity_create_candidate_profile.xml
+++ b/frontend/android/app/src/main/res/layout/include_activity_create_candidate_profile.xml
@@ -232,6 +232,7 @@
             android:drawableLeft="@drawable/baseline_assignment_ind_black_24"
             android:drawablePadding="10dp"
             android:hint="Tell us about yourself"
+            android:maxLength="300"
             android:lines="2"
             android:maxLines="2"
             android:paddingLeft="15dp"
