--- a/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
@@ -120,6 +120,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/et_login"
+                    android:maxLength="300"
                     android:drawableStart="@drawable/baseline_list_black_24"
                     android:drawablePadding="10dp"
                     android:ems="10"
