--- a/frontend/android/app/src/main/res/layout/activity_onboarding.xml
+++ b/frontend/android/app/src/main/res/layout/activity_onboarding.xml
@@ -31,10 +31,26 @@
 
         android:textStyle="italic"
         android:background="@color/transparent"
-        android:textColor="@color/colorDarkAccent"
+        android:textColor="@color/colorBlack"
         android:visibility="gone"
         android:text="next"
         android:layout_marginStart="20dp"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/TVExit"
+        android:layout_toStartOf="@id/pageIndicatorView"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="48dp"
+
+        android:textStyle="italic"
+        android:background="@color/transparent"
+        android:textColor="@color/colorBlack"
+        android:visibility="gone"
+        android:text="exit"
+        android:layout_marginEnd="20dp"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
