--- a/frontend/android/app/src/main/res/layout/activity_splash.xml
+++ b/frontend/android/app/src/main/res/layout/activity_splash.xml
@@ -26,7 +26,7 @@
             android:layout_below="@+id/IVAppIcon"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="0dp"
-            android:text="Career-Tinder"
+            android:text="Swipe 2 Job"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
