--- a/frontend/android/app/src/main/res/values/colors.xml
+++ b/frontend/android/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#01579b</color>
     <color name="colorDarkAccent">#A9A9A9</color>
     <color name="colorGrey">#D9E0E7</color>
+    <color name="colorBlack">#000000</color>
     <color name="colorCardBackgrounds">#C0C0C0</color>
     <color name="colorAppBackground">#DEDEDE</color>
     <color name="colorButtonBackground">#001540</color>
